Зщые гзвфеуы фтв сдуфтгз

--- a/_i18n/ru/_posts/2010-05-01-1-of-may.markdown
+++ b/_i18n/ru/_posts/2010-05-01-1-of-may.markdown
@@ -12,19 +12,21 @@ lang: ru
 
 В прошлый раз я попал на первомайскую демонстрацию случайно, а в этот раз пошел злонамеренно — чтобы пустить в дело свой новый семипро комплект с красноленточной линзой. Выражаю особую благодарность активным участникам за бесконечные лулзы и идеальный косплей загнивающего совка.
 
-![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/7e9db0694ebd74eb844960a592fe89dd.jpg)
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/3ca0ad29c6b174d42f041dc9870a238f.jpg)
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/c8daa692ad9e2ac33249437f1ebebd44.jpg)
+- ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/f63610104f4d4c6d9c75d0fc2f44d45d.jpg)
+- ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/7e9db0694ebd74eb844960a592fe89dd.jpg)
+
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/a5e3ac667cd80d2dab9634aac7d7db4c.jpg)
-![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/f63610104f4d4c6d9c75d0fc2f44d45d.jpg)
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/299fa77061ec052b6e1857ced53f55c3.jpg)
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/33d0aec735a2cd5d8ea25e65a68ab73b.jpg)
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/44e9aa8b53025bca5f72cf8352af2b12.jpg)
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/896f8ba72c314615124c61936922402b.jpg)
-![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/c452cb4837aa3e40ec4709e884296575.jpg)
+- ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/c452cb4837aa3e40ec4709e884296575.jpg)
+- ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/61882ba9a620e1abb1769ff04da94af1.jpg)
+
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/66b14615a4eede3c4220a5b713924a46.jpg)
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/934e652a5e464505ab7356f40875ba0e.jpg)
-![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/61882ba9a620e1abb1769ff04da94af1.jpg)
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/b872003515df5a9771478d14842b4341.jpg)
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/b5c8128efff9fbeb5616253d29884c76.jpg)
 ![Первомайская демонстрация, Екатеринбург 2010, Дмитрий Афонин](/assets/images/2017/10/def33bd3093c8b13b5f72e4ef35c53a5.jpg)
