--- a/_i18n/ru/_posts/2013-09-05-adalar.markdown
+++ b/_i18n/ru/_posts/2013-09-05-adalar.markdown
@@ -72,8 +72,8 @@ lang: ru
 
 Кстати, в отличие от Стамбула, [где овердевятьтысяч кошек](/ru/blog/istanbul-south-european/ "Стамбул — южный берег Европейской части"), здесь предпочитают есть собак. Поэтому мирно спящих блохастых няшей на улицах в избытке. На потрясающе красивых тихих улицах, под сенью древ. Потрясающе красивых древ с великолепными кронами. Которые состоят из изящных ветвей и умопомрачительного цвета листьев. Которые едят невиданных форм жуки. Ну вы поняли.
 
-![Принцевы острова, Стамбул 2013](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39b7.jpg)
-![Принцевы острова, Стамбул 2013](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39c7.jpg)
+- ![Принцевы острова, Стамбул 2013](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39b7.jpg)
+- ![Принцевы острова, Стамбул 2013](/assets/images/2017/10/UNADJUSTEDNONRAW_thumb_39c7.jpg)
 
 Попить и покушать дают в основном в районе пристани. Обходится такое удовольствие не дороже, чем в самом Стамбуле, а потрясающие виды на Босфор, берега Стамбула и проплывающие мимо величественные суда делают ОТВАЛ БАШКИ. Люди здесь живут состоятельные, есть несколько платных пляжей, речное такси за дикие деньги, огромные виллы с бассейнами и мансардами и вообще всё, ЧЕГО У ВАС НИКОГДА НЕ БУДЕТ.
 
