--- a/_i18n/ru/_posts/2025-04-30-fuji-x100vi.markdown
+++ b/_i18n/ru/_posts/2025-04-30-fuji-x100vi.markdown
@@ -7,7 +7,7 @@ tags:
 - notes
 image: /assets/images/2025/04/DSCF1067.jpg
 lang: ru
-translation_key: x100vi
+translation_key: fuji-x100vi
 ---
 
 Этот блог начался в 2009 году — ещё во времена ЖЖ. За 16 лет несколько раз сменилась платформа, хостинг, доменная зону, моя локация и даже майндсет. Но неизменной остаётся моя любовь к фотографии и графомании!
