Bergen title updares

--- a/_i18n/en/_posts/2025-07-22-bergen.md
+++ b/_i18n/en/_posts/2025-07-22-bergen.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: 'Bergen: Five Long Days in Norway'
+title: 'Bergen: Five Sunsets in Fjords'
 date: '2025-07-22 10:52:00'
 tags:
 - travel
 - europe
 - scandinavia
-image: /assets/images/2025/07/bergen/DSCF7159.jpg
+image: /assets/images/2025/07/bergen/DSCF6969.jpg
 lang: en
 translation_key: bergen
 ---
