Typo correction in Ostrava post

--- a/_i18n/en/_posts/2025-07-29-ostrava-2025.md
+++ b/_i18n/en/_posts/2025-07-29-ostrava-2025.md
@@ -30,7 +30,7 @@ Ostrava doesn’t offer picturesque sights typical for European old towns, becau
 - ![](/assets/images/2025/07/ostrava/DSCF6698.jpg)
 - ![](/assets/images/2025/07/ostrava/DSCF6691.jpg)
 
-The industrial revolution made the city grow to over 300,000 inhabitants by the second millennium, but also left plenty of ugly scars. Since then, Ostrava has gone through a long post-industrial hangover, with noticeable depopulation and decay.
+The industrial revolution made the city grow to over 300,000 inhabitants by the third millennia, but also left plenty of ugly scars. Since then, Ostrava has gone through a long post-industrial hangover, with noticeable depopulation and decay.
 
 - ![](/assets/images/2025/07/ostrava/DSCF7403.jpg)
 - ![](/assets/images/2025/07/ostrava/DSCF7411.jpg)
