--- a/_i18n/ru/_posts/2025-05-10-lublin.md
+++ b/_i18n/ru/_posts/2025-05-10-lublin.md
@@ -6,7 +6,7 @@ tags:
 - travel
 - europe
 - polska
-image: 
+image: /assets/images/2025/05/lublin/DSCF2223.jpg
 lang: ru
 translation_key: lublin
 ---
