Lublin post update

--- a/_i18n/en/_posts/2025-05-10-lublin.md
+++ b/_i18n/en/_posts/2025-05-10-lublin.md
@@ -11,19 +11,19 @@ lang: en
 translation_key: lublin
 ---
 
-Lublin got kinda hot lately after serving as the backdrop for the Oscar-nominated movie *[A Real Pain](https://www.imdb.com/title/tt21823606/)*. Since it was just a few hours away — and I’d already been almost everywhere else in Poland — I decided to go and see if it was worth a visit.
+Lublin got kinda hot lately after serving as the backdrop for the Oscar-nominated movie *[A Real Pain](https://www.imdb.com/title/tt21823606/)*. Since it was just a few hours away — and I’d already been almost everywhere else in Poland — I decided to go and see if it was worth a visit.
 
 ![](/assets/images/2025/05/lublin/DSCF2285.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2422.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2424.jpg)
 
-The city’s rich Jewish legacy made it a perfect location for Jesse Eisenberg’s dramedy about two cousins traveling from the US to Poland to pay respects to their family roots.
+The city’s rich Jewish legacy made it a perfect location for Jesse Eisenberg’s story of two cousins traveling from the US to Poland to pay respects to their family roots.
 
 ![](/assets/images/2025/05/lublin/DSCF2356.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2271.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2414.jpg)
 
-Jewish Lublin ended in the concentration camps over 80 years ago, and today the [memorial museum at Majdanek](https://maps.app.goo.gl/5yMoRyVCPgYDLDwE8) is one of the few places keeping its memory alive.
+Jewish Lublin ended in the concentration camps over 80 years ago, and today the [memorial museum at Majdanek](https://maps.app.goo.gl/5yMoRyVCPgYDLDwE8) is one of the few places bearing the memories.
 
 ![](/assets/images/2025/05/lublin/DSCF2509.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2489.jpg)
