--- a/_i18n/ru/_posts/2025-05-10-lublin.md
+++ b/_i18n/ru/_posts/2025-05-10-lublin.md
@@ -11,13 +11,13 @@ lang: ru
 translation_key: lublin
 ---
 
-В этом году Люблин выступил на церемонии Оскара — вместе со снятой на его фоне хитовой [«Настоящей болью»](https://www.imdb.com/title/tt21823606/). Я решил съездить и посмотреть, что ждёт среднестатистического туриста в этом среднестатистическом польском городе.
+В этом году Люблин засветился на церемонии Оскара вместе со снятым на его фоне хитом [«Настоящая боль»](https://www.imdb.com/title/tt21823606/). Я разведал, что ждёт среднестатистического туриста в этом среднестатистическом польском городе.
 
 ![](/assets/images/2025/05/lublin/DSCF2285.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2422.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2424.jpg)
 
-Многие века история [Люблина](https://maps.app.goo.gl/EHSF29zwLFkJbnRr7) была крепко связана с еврейским комьюнити, составлявшим 30% населения города — поэтому он и стал фоном для киношной истории Джесси Айзенберга и Кирана Калкина, понаехавших на родину бабушки.
+Многие века история [Люблина](https://maps.app.goo.gl/EHSF29zwLFkJbnRr7) была крепко связана с еврейским комьюнити, составлявшим 30% населения города — поэтому он и стал отличным фоном для киношной истории двух еврейских кузенов, понаехавших на родину бабушки.
 
 ![](/assets/images/2025/05/lublin/DSCF2356.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2271.jpg)
@@ -32,13 +32,13 @@ translation_key: lublin
 ![](/assets/images/2025/05/lublin/DSCF2516.jpg)
 ![](/assets/images/2025/05/lublin/DSCF2531.jpg)
 
-Сейчас в Люблине живёт чуть больше 300 тысяч человек — это столица далеко не самого богатого региона, расположенного в юго-восточном углу страны — на равном удалении от Варшавы и Кракова, ближе к Украине и Беларуси.
+Сейчас в Люблине живёт чуть больше 300 тысяч человек — это столица далеко не самого богатого воеводства, расположенного в юго-восточном углу страны — на равном удалении от Варшавы и Кракова, ближе к Украине и Беларуси.
 
 ![](/assets/images/2025/05/lublin/DSCF2281.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2291.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2352.jpg)
 
-Люблин пережил множество пожаров, сохранив до наших дней старый город с чудесными образцами польского ренессанса. Но что не взял огонь, медленно доедает хронический недостаток финансирования. В центре и за его пределами.
+Люблин пережил множество пожаров, сохранив до наших дней старый город с чудесными образцами польского ренессанса. Но что не взял огонь, медленно доедает хронический недостаток финансирования, характерный для региона.
 
 ![](/assets/images/2025/05/lublin/DSCF2225.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2230.jpg)
@@ -50,7 +50,7 @@ translation_key: lublin
 - ![](/assets/images/2025/05/lublin/DSCF2259.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2260.jpg)
 
-Как и во многих городах второго порядка, осью локальной жизни скорее стала местная [торговая галерея](https://maps.app.goo.gl/YPP3WxvZve9ZJKA39), которая притворяется неплохим общественным пространством с прекрасным руфтоп-садом с панорамным видом на замок.
+Как и во многих городах второго порядка, осью локальной жизни служит скорее [торговая галерея](https://maps.app.goo.gl/YPP3WxvZve9ZJKA39), которая притворяется неплохим общественным пространством с прекрасным руфтоп-садом и панорамным видом на старый город.
 
 ![](/assets/images/2025/05/lublin/DSCF2363.jpg)
 ![](/assets/images/2025/05/lublin/DSCF2240.jpg)
@@ -67,11 +67,11 @@ translation_key: lublin
 - ![](/assets/images/2025/05/lublin/DSCF2398.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2386.jpg)
 
-Газеты писали, что после съёмок [Джесси Айзенберг решил оформить польское гражданство](https://www.bbc.com/news/articles/c2kg17p2102o), положенное ему по корням. Но я посмею усомниться, что именно Люблин вдохновил актёра и режиссёра на этот достойный восхищения поступок.
+После релиза фильма СМИ порвала новость о том, что [Джесси Айзенберг решил получить польское гражданство](https://www.bbc.com/news/articles/c2kg17p2102o). Я порадовался и позавидовал, но одновременно и усомнился, что поездка в Люблин может вдохновить кого-то на такой шаг.
 
 - ![](/assets/images/2025/05/lublin/DSCF2420.jpg)
 - ![](/assets/images/2025/05/lublin/DSCF2310.jpg)
 
 Для меня Люблин — уже тридцатый по счёту город Польши. Не самый унылый, но всё же вызывающий *настоящую боль* своим огромным потенциалом, который тихонечко отлетает вместе с фасадной штукатуркой старого города.
 
-Поэтому, повторную поездку я точно отложу до следующего возрождения.
+Поэтому, свою повторную поездку я точно отложу до следующего ренессанса.
