--- a/_i18n/en/_posts/2025-05-10-lublin.md
+++ b/_i18n/en/_posts/2025-05-10-lublin.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'Lublin — A Real Real Pain'
+title: 'Lublin: A Real Real Pain'
 date: '2025-05-10 12:20:00'
 tags:
 - travel
