--- a/_i18n/ru/_posts/2025-10-05-katowice.md
+++ b/_i18n/ru/_posts/2025-10-05-katowice.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Katowice: Poland's Best City?"
+title: "Катовице — лучший город Польши?"
 date: '2025-10-05 12:00:00'
 tags:
 - travel
