--- a/_i18n/ru/_posts/2025-10-05-katowice.md
+++ b/_i18n/ru/_posts/2025-10-05-katowice.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Катовице — лучший город Польши?"
+title: "Лучший город Польши 2025"
 date: '2025-10-05 12:00:00'
 tags:
 - travel
@@ -11,7 +11,7 @@ lang: ru
 translation_key: katowice
 ---
 
-Этим летом Катовице внезапно возглавил топ лучших городов для жизни в Польше по версии Business Insider. Варшава в том же рейтинге заняла 10 место, а Краков и вовсе оказался в конце. Уже готовы переехать в это божественное место?
+Этим летом Катовице внезапно возглавили топ лучших городов для жизни в Польше по версии Business Insider. Варшава заняла 10 место в рейтинге, а Краков и вовсе оказался в конце. Уже готовы переехать в это божественное место?
 
 ![](/assets/images/2025/08/katowice/DSCF9180-bw.jpg)
 - ![](/assets/images/2025/08/katowice/DSCF9131-bw.jpg)
@@ -23,7 +23,7 @@ translation_key: katowice
 - ![](/assets/images/2025/08/katowice/DSCF9054-bw.jpg)
 - ![](/assets/images/2025/08/katowice/DSCF9123-bw.jpg)
 
-Сам город с населением около 300 тысяч не входит даже в десятку крупнейших. Но это на бумаге — в реальности он склеен с 18 меньшими муниципалитетами в одну бесшовную конурбацию на 2 миллиона жителей (3 миллиона в метрополии).
+Сам город с населением около 300 тысяч не входит даже в десятку крупнейших. Но это на бумаге — в реальности он склеен с 18 меньшими муниципалитетами в одну бесшовную конурбацию на 2 миллиона жителей (3М в метрополии).
 
 ![](/assets/images/2025/08/katowice/DSCF9039.jpg)
 - ![](/assets/images/2025/08/katowice/DSCF9060.jpg)
@@ -34,7 +34,7 @@ translation_key: katowice
 - ![](/assets/images/2025/08/katowice/DSCF9107-bw.jpg)
 - ![](/assets/images/2025/08/katowice/DSCF9118-bw.jpg)
 
-Предпосылки простые: весь регион стоит на угле и тяжёлой промышленности, что, наряду с мощной экономикой, приносит стандартный набор проблем: плохой воздух, депрессивная городская среда, высокое содержание «рабочих окраин».
+Предпосылки простые: весь регион стоит на угле и тяжёлой промышленности, что, наряду с мощной экономикой, приносит стандартный набор проблем: плохой воздух, депрессивная среда, высокое содержание «рабочих окраин».
 
 - ![](/assets/images/2025/08/katowice/DSCF9046.jpg)
 - ![](/assets/images/2025/08/katowice/DSCF9192.jpg)
