Update Vienna post with refined language and clarity in both English and Russian versions

--- a/_i18n/en/_posts/2025-12-05-vienna.md
+++ b/_i18n/en/_posts/2025-12-05-vienna.md
@@ -10,7 +10,7 @@ lang: en
 translation_key: vienna
 ---
 
-Vienna, Wien, Wean. Wiedeń to Poles, Vindobona to Romans, Bécs to Hungarians. Capital of dead empires, spy paradise, art treasury, cradle of Secession. Home to 2M people, constantly topping “quality of life” and “most expensive” rankings. What else can you say about this place? I’ve been there three times and still don’t have a take. It’s undeniably one of Europe’s finest, but so layered and complex that trying to cover it feels futile. So I’ll spare the words this time and just share 40 photos that try to reflect different moods.
+Vienna, Wien, Wean. Wiedeń to Poles, Vindobona to Romans, Bécs to Hungarians. Capital of dead empires, spy paradise, art treasury, cradle of Secession. Home to 2M people, constantly topping “quality of life” and “most expensive” rankings. What else can you say? I’ve been there three times and still don’t have a take. It’s undeniably one of Europe’s finest, but so layered and complex that trying to cover it feels futile. So I’ll spare the words this time and just share 40 photos that try to reflect different moods.
 
 ![](/assets/images/2025/11/vienna/DSCF2229.jpg)
 - ![](/assets/images/2025/11/vienna/DSCF2554.jpg)
