--- a/_i18n/ru/_posts/2025-12-05-vienna.md
+++ b/_i18n/ru/_posts/2025-12-05-vienna.md
@@ -10,7 +10,7 @@ lang: ru
 translation_key: vienna
 ---
 
-Вена, Wien и даже Wean, также известный полякам как Wiedeń, Vindobona для древних римлян, и Bécs среди мадьяр. Столица мёртвых империй, шпионское гнездо, колыбель Сецессиона и сокровищница искусств. Дом двух миллионов, возглавляющий все рейтинги качества и стоимости жизни. Что ещё сказать? Даже три визита и 12 лет спустя на ум приходит только «я не знаю». Вена точно входит в мой персональный топ, но я не умею описать её состава, ценности и вкусовых характеристик. Поэтому, сэкономлю слова и оставлю фотографический мудборд, который пытается отразить слои и настроения.
+Вена, Wien и даже Wean. Wiedeń для поляков, Vindobona среди древних римлян, Bécs у мадьяр. Столица мёртвых империй, гнездо шпионов, колыбель Сецессиона и мировая арт-сокровищница. Дом для двух миллионов — с высшим качеством и стоимостью жизни. Что ещё сказать? Даже три визита и 12 лет спустя на ум приходит только «я не знаю». Вена входит в мой персональный топ, но я не умею описать состава и вкусовых характеристик. Поэтому, сэкономлю слова и оставлю фотографический мудборд — в тщетной попытке передать слои и настроения.
 
 ![](/assets/images/2025/11/vienna/DSCF2229.jpg)
 - ![](/assets/images/2025/11/vienna/DSCF2554.jpg)
